--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <title>Plonq</title>
 </head>
 <body>
+  
   <!-- header -->
   <header class="header">
     <div class="container">
@@ -21,7 +22,7 @@
         <a href="/index.html" class="nav__logo"><img src="./img/logo.svg" alt="logo"></a>
         <ul class="nav__list">
           <li class="nav__item"><a href="#" class="nav__link">Продукты</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Приложение</a></li>
+          <li class="nav__item"><a href="/Apply.html" class="nav__link">Приложение</a></li>
           <li class="nav__item"><a href="#" class="nav__link">Дистрибуция</a></li>
           <li class="nav__item"><a href="#" class="nav__link">Где купить</a></li>
         </ul>
@@ -29,6 +30,7 @@
     </div>
   </header>
   <!-- header // -->
+
 <main>
   <!-- hero -->
   <section class="hero">
