--- a/Apply.html
+++ b/Apply.html
@@ -21,8 +21,8 @@
       <nav class="nav">
         <a href="/index.html" class="nav__logo"><img src="./img/logo.svg" alt="logo"></a>
         <ul class="nav__list">
-          <li class="nav__item"><a href="#" class="nav__link">Продукты</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Приложение</a></li>
+          <li class="nav__item"><a href="./product.html" class="nav__link">Продукты</a></li>
+          <li class="nav__item"><a href="./Apply.html" class="nav__link">Приложение</a></li>
           <li class="nav__item"><a href="#" class="nav__link">Дистрибуция</a></li>
           <li class="nav__item"><a href="#" class="nav__link">Где купить</a></li>
         </ul>
