--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="nav">
         <a href="/index.html" class="nav__logo"><img src="./img/logo.svg" alt="logo"></a>
         <ul class="nav__list">
-          <li class="nav__item"><a href="#" class="nav__link">Продукты</a></li>
+          <li class="nav__item"><a href="./product.html" class="nav__link">Продукты</a></li>
           <li class="nav__item"><a href="/Apply.html" class="nav__link">Приложение</a></li>
           <li class="nav__item"><a href="#" class="nav__link">Дистрибуция</a></li>
           <li class="nav__item"><a href="#" class="nav__link">Где купить</a></li>
@@ -36,13 +36,16 @@
   <section class="hero">
     <div class="container">
       <div class="hero__inner">
+        <div class="hero__content">
         <div class="hero__logo"><img src="./img/hero-logo.svg" alt="logo">
         <div class="hero__new"><img src="./img/hero-new.svg" alt="NEW"></div>
       </div>
-      <h1 class="hero__text">Новый стандарт одноразовых е-сигарет.</h1>
+    </div>
+    <h1 class="hero__text">Новый стандарт<br> одноразовых е-сигарет.</h1>
         <div class="hero__buttons">
           <a href="/plonq500.html" class="hero__details">Подробнее
-            <img class="hero__arrow" src="../img/hero-arrow.svg" alt="arrow">
+            <img class="hero__arrow" src="./img/hero-arrow.svg" alt="arrow">
+            <img class="hero__arrow--black" src="./img/arrow-black.svg" alt="arrow">
           </a>
           <button  class="hero__btn btn-reset">Где купить</button>
         </div>
@@ -268,4 +271,5 @@
 <!-- footer // -->
 
 </body>
+
 </html>
