mobile menu doneu

--- a/Apply.html
+++ b/Apply.html
@@ -19,13 +19,27 @@
   <header class="header">
     <div class="container">
       <nav class="nav">
+        <a href="" class="nav__location"><img src="./img/Pin_icon.svg" alt=""></a>
         <a href="/index.html" class="nav__logo"><img src="./img/logo.svg" alt="logo"></a>
-        <ul class="nav__list">
-          <li class="nav__item"><a href="./product.html" class="nav__link">Продукты</a></li>
-          <li class="nav__item"><a href="./Apply.html" class="nav__link">Приложение</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Дистрибуция</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Где купить</a></li>
-        </ul>
+        <ul class="nav-menu">
+          <li class="nav-item">
+              <a href="./product.html" class="nav-link">Продукты</a>
+          </li>
+          <li class="nav-item">
+              <a href="./Apply.html" class="nav-link">Приложение</a>
+          </li>
+          <li class="nav-item">
+              <a href="#" class="nav-link">Дистрибуция</a>
+          </li>
+          <li class="nav-item">
+              <a href="#" class="nav-link">Где купить</a>
+          </li>
+      </ul>
+      <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+      </div>
       </nav>
     </div>
   </header>
@@ -214,6 +228,10 @@
   </footer>
 
 <!-- footer // -->
+
+  <!-- scripts -->
+
+  <script src="./js/main.js"></script>
 
 </body>
 </html>
