--- a/product.html
+++ b/product.html
@@ -8,6 +8,7 @@
   <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
   <!-- icons // -->
   <!-- style -->
+  <link rel="stylesheet" href="./css/aos.css">
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/style.css">
   <!-- style // -->
@@ -28,7 +29,7 @@
               <a href="./Apply.html" class="nav-link">Приложение</a>
           </li>
           <li class="nav-item">
-              <a href="#" class="nav-link">Дистрибуция</a>
+              <a href="./contacts.html" class="nav-link">Дистрибуция</a>
           </li>
           <li class="nav-item">
               <a href="#" class="nav-link">Где купить</a>
@@ -50,7 +51,7 @@
     <section class="device">
       <div class="container">
         <div class="device__inner">
-          <div class="device__content">
+          <div class="device__content" data-aos="fade-down-right" data-aos-duration="1500">
             <h3 class="device__title">Устройство<br> Plonq X</h3>
             <div class="device___text">Устройство Plonq X — это электронный испаритель, который преобразует жидкость в пар.
 
@@ -59,7 +60,7 @@
               <p>Благодаря порту USB C устройство заряжается менее чем за час.</p>
             </div>
           </div>
-          <div class="device__img"><img class="img" src="./img/plonqX-image1.png" alt=""></div>
+          <div class="device__img" data-aos="fade-down-left" data-aos-duration="1500"><img class="img" src="./img/plonqX-image1.png" alt=""></div>
         </div>
       </div>
     </section>
@@ -70,8 +71,8 @@
     <section class="capsule">
       <div class="container">
         <div class="capsule__inner">
-          <div class="capsule__img"><img class="img" src="./img/capsule.png" alt=""></div>
-          <div class="capsule__content">
+          <div class="capsule__img" data-aos="fade-up-right" data-aos-duration="1500"><img class="img" src="./img/capsule.png" alt=""></div>
+          <div class="capsule__content" data-aos="fade-up-left" data-aos-duration="1500">
             <div class="capsule__title">Капсула<br> Plonq POD</div>
             <div class="capsule__text">Plonq POD - это одноразовая капсула с жидкостью. Жидкость создана и заправлена при строгом контроле.
               <p>Капсулы не предназначены для повторной заправки. 1 капсула в среднем рассчитана на 300 затяжек, что приблизительно равно 1,5-2 пачек сигарет.</p>
@@ -86,13 +87,13 @@
     <section class="device-plonq500">
       <div class="container device-container">
         <div class="device-plonq500__inner">
-          <div class="device-plonq500-content">
+          <div class="device-plonq500-content" data-aos="fade-down" data-aos-duration="1500">
             <div class="device-plonq500-title">Устройство<br> Plonq 500</div>
             <div class="device-plonq500-text">Одноразовый электронный испаритель, который преобразует жидкость в пар.
               <p>Plonq 500 рассчитан на 500 затяжек и не предназначен для повторной перезаправки и подзарядки.</p>
             </div>
           </div>
-          <div class="device-plonq500-img"><img class="img" src="./img/More.png" alt="img"></div>
+          <div class="device-plonq500-img" data-aos="fade-up" data-aos-duration="1500"><img class="img" src="./img/More.png" alt="img"></div>
         </div>
       </div>
     </section>
@@ -105,23 +106,23 @@
         <div class="compound__title">Состав жидкости</div>
         <div class="compound__list">
 
-          <div class="compound__item">
+          <div class="compound__item" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="50">
             <div class="compound__item-title">Пропиленгликоль<br>и глицерин (50/50)</div>
             <div class="compound__text">Пропиленгликоль и глицерин — химически чистые жидкости, используемые для создания видимого пара. Кроме электронных сигарет их применяют в медицине, косметологии и пищевой промышленности.</div>
           </div>
 
-          <div class="compound__item">
+          <div class="compound__item" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="100">
             <div class="compound__item-title">Солевой никотин</div>
             <div class="compound__text">Солевой никотин -  стимулятор, получаемый из табачного листа и обработаный различными кислотами.
               <p>В жидкостях Plonq используется новое поколение солевого никотина Q-salt c более высокой скоростью усваиваемости.</p></div>
           </div>
 
-          <div class="compound__item">
+          <div class="compound__item" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="200">
             <div class="compound__item-title">Ароматизаторы</div>
             <div class="compound__text">В состав ароматизаторов Plonq входят как природные, так и искусственные компоненты, придающие продукту неповторимый вкус.</div>
           </div>
 
-          <div class="compound__item">
+          <div class="compound__item" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="300">
             <div class="compound__item-title">Бензоиная<br>кислота</div>
             <div class="compound__text">Входит в состав солевого никотина. Делает пар мягче и помогает быстрее насыщать организм никотином.</div>
           </div>
@@ -137,9 +138,9 @@
     <div class="container certificate-container">
       <h3 class="certificate__title">Сертификаты качества</h3>
       <div class="certificate__inner">
-        <div class="certificate__img"><img class="img" src="./img/image_1.png" alt="certificate img"></div>
-        <div class="certificate__img"><img class="img" src="./img/image_2.png" alt="certificate img"></div>
-        <div class="certificate__img"><img class="img" src="./img/image_3.png" alt="certificate img"></div>
+        <div class="certificate__img" data-aos="fade-right" data-aos-duration="1500"><img class="img" src="./img/image_1.png" alt="certificate img"></div>
+        <div class="certificate__img" data-aos="fade-down" data-aos-duration="1500"><img class="img" src="./img/image_2.png" alt="certificate img"></div>
+        <div class="certificate__img" data-aos="fade-left" data-aos-duration="1500"><img class="img" src="./img/image_3.png" alt="certificate img"></div>
       </div>
     </div>
   </section>
@@ -149,99 +150,153 @@
   </main>
 
 
-    <!-- footer -->
-    <footer class="footer">
-      <div class="container">
-        <div class="footer__top">
-          <a href="#" class="footer__logo"><img src="./img/logo.svg" alt=""></a>
-          <div class="footer__subscribe">
-          <div class="footer__sub">Подпишитесь на наши обновления</div>
-          <div class="footer__form">
-            <form action="POST">
-              <input class="form__email" type="email" name="email">
-              <button class="footer__btn btn-reset">Подписаться</button>
-            </form>
-          </div>
-          </div>
-            <div class="footer__language">
+       <!-- footer -->
+       <footer class="footer" data-aos="fade-up" data-aos-duration="1500">
+        <div class="container">
+          <div class="footer__top">
+            <a href="#" class="footer__logo" data-aos="fade-right" data-aos-duration="1500"
+              ><img src="./img/logo.svg" alt=""
+            /></a>
+            <div class="footer__subscribe">
+              <div class="footer__sub">Подпишитесь на наши обновления</div>
+              <div class="footer__form">
+                <form action="POST">
+                  <input class="form__email" type="email" name="email" />
+                  <button class="footer__btn btn-reset">Подписаться</button>
+                </form>
+              </div>
+            </div>
+            <div class="footer__language" data-aos="fade-left" data-aos-duration="1500" >
               <a href="" class="russian__language">Ru</a>
-              <a href="" class="english__language">|  En</a>
+              <a href="" class="english__language">| En</a>
             </div>
-              
+          </div>
+  
+          <div class="footer__middle">
+            <div class="footer__left">
+              <div class="footer__left-inner">
+                <div class="footer__icon-left" data-aos="fade-right" data-aos-duration="1500">
+                  <img
+                    class="footer__icon"
+                    src="./img/Apple_icon.svg"
+                    alt="icon IOS"
+                  />Coming soon<br />for IOS
+                </div>
+              </div>
+  
+              <div class="footer__left-inner">
+                <div class="footer__icon-left" data-aos="fade-right" data-aos-duration="1500">
+                  <img
+                    class="footer__icon"
+                    src="./img/Android_icon.svg"
+                    alt="icon Android"
+                  />Coming soon<br />for IOS
+                </div>
+              </div>
+            </div>
+            <div class="footer__center">
+              <div class="footer__center-inner">
+  
+                <ul class="footer__list" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="50">
+                  <li class="footer__item">
+                    <a href="#" class="footer__link--active">Продукты</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="footer__link">Plonq 400</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="footer__link">Plonq 500</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="footer__link">Plonq X</a>
+                  </li>
+                </ul>
+  
+                <ul class="footer__list" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">
+                  <li class="footer__item">
+                    <a href="#" class="footer__link--active">Технологии</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="footer__link">О приложении</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="footer__link"
+                      >Об электронных<br />
+                      сигаретах</a
+                    >
+                  </li>
+                </ul>
+  
+                <ul class="footer__list"data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">
+                  <li class="footer__item">
+                    <a href="#" class="footer__link--active">Поддержка</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="footer__link">Связаться с нами</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="footer__link">Условия возврата</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="footer__link"
+                      >Политика<br />
+                      конфиденциальности</a
+                    >
+                  </li>
+                </ul>
+  
+                <ul class="footer__list" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">
+                  <li class="footer__item">
+                    <a href="#" class="footer__link--active">Прочее</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="footer__link">Точки продаж</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="footer__link">О Компании</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="footer__link">Оптовым покупателям</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="footer__right" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="50">
+              <div class="footer__right-inner">
+                <a href="#" class="footer__right-int"
+                  ><img
+                    class="footer__right-icon"
+                    src="./img/Instagram_icon.svg"
+                    alt="instagram"
+                /></a>
+                <div class="footer__right-adress">
+                  © 2021 PLONQ LLC<br />
+                  40900 Woodward Avenue Suite<br />
+                  111 Bloomfield Hills<br />
+                  MI 48304 USA
+                </div>
+              </div>
+            </div>
+          </div>
+  
+          <div class="footer__bottom" >
+            <div class="footer__bottom-inner">
+              <div class="footer__bottoom-text">
+                ПРОДАЖА НЕСОВЕРШЕННОЛЕТНИМ ЗАПРЕЩЕНА.<br />
+                Сайт используется исключительно в целях информирования действующих
+                потребителей продукции PLONQ<br />
+                Защищено выпущенными и/или находящимися на одобрении
+                международными патентами..
+              </div>
+            </div>
+          </div>
         </div>
+      </footer>
   
-        <div class="footer__middle">
-          <div class="footer__left">
-  
-            <div class="footer__left-inner">
-              <div class="footer__icon-left"><img class="footer__icon" src="./img/Apple_icon.svg" alt="icon IOS">Coming soon<br>for IOS</div>
-              
-            </div>
-  
-            <div class="footer__left-inner">
-              <div class="footer__icon-left"><img class="footer__icon" src="./img/Android_icon.svg" alt="icon Android">Coming soon<br>for IOS</div>
-            </div>
-          </div>
-          <div class="footer__center">
-            <div class="footer__center-inner">
-  
-              <ul class="footer__list">
-                <li class="footer__item"><a href="#" class="footer__link--active">Продукты</a></li>
-                <li class="footer__item"><a href="#" class="footer__link">Plonq 400</a></li>
-                <li class="footer__item"><a href="#" class="footer__link">Plonq 500</a></li>
-                <li class="footer__item"><a href="#" class="footer__link">Plonq X</a></li>
-              </ul>
-  
-              <ul class="footer__list">
-                <li class="footer__item"><a href="#" class="footer__link--active">Технологии</a></li>
-                <li class="footer__item"><a href="#" class="footer__link">О приложении</a></li>
-                <li class="footer__item"><a href="#" class="footer__link">Об электронных<br>
-                  сигаретах</a></li>
-              </ul>
-  
-              <ul class="footer__list">
-                <li class="footer__item"><a href="#" class="footer__link--active">Поддержка</a></li>
-                <li class="footer__item"><a href="#" class="footer__link">Связаться с нами</a></li>
-                <li class="footer__item"><a href="#" class="footer__link">Условия возврата</a></li>
-                <li class="footer__item"><a href="#" class="footer__link">Политика<br>
-                  конфиденциальности</a></li>
-              </ul>
-  
-              <ul class="footer__list">
-                <li class="footer__item"><a href="#" class="footer__link--active">Прочее</a></li>
-                <li class="footer__item"><a href="#" class="footer__link">Точки продаж</a></li>
-                <li class="footer__item"><a href="#" class="footer__link">О Компании</a></li>
-                <li class="footer__item"><a href="#" class="footer__link">Оптовым покупателям</a></li>
-              </ul>
-  
-            </div>
-          </div>
-          <div class="footer__right">
-            <div class="footer__right-inner">
-              <a href="#" class="footer__right-int"><img class="footer__right-icon" src="./img/Instagram_icon.svg" alt="instagram"></a>
-              <div class="footer__right-adress">© 2021 PLONQ LLC<br>
-                40900 Woodward Avenue Suite<br>
-                111 Bloomfield Hills<br>
-                MI 48304 USA</div>
-            </div>
-          </div>
-        </div>
-  
-  
-        <div class="footer__bottom">
-          <div class="footer__bottom-inner">
-            <div class="footer__bottoom-text">ПРОДАЖА НЕСОВЕРШЕННОЛЕТНИМ ЗАПРЕЩЕНА.<br>
-              Сайт используется исключительно в целях информирования действующих потребителей продукции PLONQ<br>
-              Защищено выпущенными и/или находящимися на одобрении международными патентами.. </div>
-          </div>
-        </div>
-      </div>
-    </footer>
-  
-  <!-- footer // -->
+      <!-- footer // -->
 
     <!-- scripts -->
-
+    <script src="./js/aos.js"></script>
     <script src="./js/main.js"></script>
 
   </body>
